--- a/thesis/06-appendix/04-Populations.tex
+++ b/thesis/06-appendix/04-Populations.tex
@@ -7,7 +7,7 @@
     \includegraphics[width=1\textwidth]{06-appendix/figs/populations_all1.pdf}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure}[H]
     \centering
     \includegraphics[width=1\textwidth]{06-appendix/figs/populations_all2.pdf}
     \caption{Final state populations for all factorization instances. The number
