--- a/thesis/Thesis.tex
+++ b/thesis/Thesis.tex
@@ -158,8 +158,9 @@
 \include{06-appendix/02-FidelityEvolution}
 \include{06-appendix/03-CostEvolution}
 \include{06-appendix/04-Populations}
+\include{06-appendix/05-EnergySpectrums}
 
-\addcontentsline{toc}{chapter}{Appendix}
+%\addcontentsline{toc}{chapter}{Appendix}
 
 %% Turn off thumb indices for unnumbered chapters.
 \thumbfalse
