--- a/thesis/04-results/02-Results.tex
+++ b/thesis/04-results/02-Results.tex
@@ -9,7 +9,7 @@ As the problem size increases, the third behavior---a sudden jump in fidelity---
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=1\textwidth]{04-results/figs/fidelity_layers_2577143.pdf}
+    \includegraphics[width=0.9\textwidth]{04-results/figs/fidelity_layers_2577143.pdf}
     \caption{Fidelity versus QAOA layer depth. Larger problems require deeper circuits to achieve significant fidelities.}
     \label{fig:fidelity_layers}
 \end{figure}
@@ -29,18 +29,23 @@ Although fidelity as a function of depth already demonstrates the improved perfo
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=1\textwidth]{04-results/figs/fidelity_gates_2577143.pdf}
+    \includegraphics[width=0.9\textwidth]{04-results/figs/fidelity_gates_2577143.pdf}
     \caption{Fidelity versus the number of two-qubit gates. This metric highlights the resource efficiency of the \texttt{linear} protocols.}
     \label{fig:fidelity_gates}
 \end{figure}
 
-Finally, as a summarizing plot, Fig.~\ref{fig:accumulated_probability} presents a metric that enables a consistent comparison between protocols across problem sizes. For larger problem instances, fidelity does not always reach the same reference level within practical resource limits, which makes direct fidelity thresholds less suitable as a single benchmark. To address this, we consider how each protocol concentrates probability within the most relevant portion of the spectrum, providing a way to compare performance across different problem sizes.
+Finally, as a summarizing plot, Fig.~\ref{fig:accumulated_probability} presents a metric that enables a consistent comparison between protocols across problem sizes. For larger problem instances, fidelity does not always reach the same reference level within practical resource limits, which makes direct fidelity thresholds less suitable as a single benchmark. To address this, we quantify how efficiently each protocol concentrates probability in the vicinity of the correct solution.
+
+Specifically, for each problem instance we compute the cumulative probability contained within the fraction $\alpha$ of eigenstates closest in energy to the target state,
+\begin{equation}
+    P_\alpha = \sum_{i \in \mathcal{N}_\alpha} |\langle i | \psi \rangle|^2\,,
+\end{equation}
+where $\mathcal{N}_\alpha$ denotes the $\alpha$\% of states nearest to the solution. We then determine the minimum number of two-qubit gates required for the accumulated probability to exceed a fixed threshold (here, $75$\%).
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=0.75\textwidth]{04-results/figs/accumulated_probability.pdf}
+    \includegraphics[width=0.68\textwidth]{04-results/figs/accumulated_probability.pdf}
     \caption{Number of two-qubit gates required to accumulate at least 75\% of the total probability
-    within the 5\% of eigenstates closest to the solution, aggregated by problem size (number of qubits).
-    Error bars represent variability across different instances with the same size.}
+    within the 5\% of eigenstates closest to the solution, aggregated by problem size (number of qubits).}
     \label{fig:accumulated_probability}
 \end{figure}
