Paragraph and caption refinements

--- a/thesis/01-introduction/01-CircuitModel.tex
+++ b/thesis/01-introduction/01-CircuitModel.tex
@@ -5,6 +5,6 @@ The circuit or gate-based model of quantum computation is the most widely studie
 
 Mathematically, a quantum circuit implements a unitary transformation U on the initial quantum state, typically chosen as $\ket{0}^{\otimes n}$. This transformation is decomposed into a series of quantum gates from a universal set of gates. Measurement in the computational basis is performed at the end of the circuit to extract classical information from the quantum circuit.
 
-Universality is a crucial property of this model, as it ensures that any unitary transformation --and therefore any quantum algorithm-- can be implemented using only a finite set of gates. This makes the circuit model a general-purpose framework, capable of simulating any other model of quantum computation.
+Universality is a crucial property of this model, as it ensures that any unitary transformation --- and therefore any quantum algorithm --- can be implemented using only a finite set of gates. This makes the circuit model a general-purpose framework, capable of simulating any other model of quantum computation.
 
 Gate-based quantum computation aligns well with digital control paradigms, and most existing quantum hardware platforms, such as superconducting qubits and trapped ions, are designed to implement this model. However, the depth and width of circuits that can be reliably executed on near-term devices are limited by noise, decoherence, and imperfect gate fidelities.
