--- a/thesis/01-introduction/02-AdiabaticModel.tex
+++ b/thesis/01-introduction/02-AdiabaticModel.tex
@@ -42,7 +42,7 @@ An important and widely studied application of adiabatic evolution in quantum de
     \hat{H}_\mathrm{P} = \sum_i h_i \hat{\sigma}_i^z + \sum_{i<j} J_{ij} \hat{\sigma}_i^z \hat{\sigma}_j^z\,,
     \label{eq:ising_hamiltonian}
 \end{equation}
-where $h_i$ are local fields, $J_{ij}$ represent coupling strengths between qubits, and $\sigma_i^z$ are Pauli-Z operators acting on the $i$-th qubit. The task is to drive the system from an initial, easily preparable ground state towards the ground state of $H_\mathrm{P}$, which encodes the optimal solution to the problem at hand.
+where $h_i$ are local fields, $J_{ij}$ represent coupling strengths between qubits, and $\hat{\sigma}_i^z$ are Pauli-Z operators acting on the $i$-th qubit. The task is to drive the system from an initial, easily preparable ground state towards the ground state of $H_\mathrm{P}$, which encodes the optimal solution to the problem at hand.
 
 In a typical AQA protocol, the evolution begins with an initial Hamiltonian of a system with a X-oriented field component of the form
 \begin{equation}
