--- a/thesis/06-appendix/05-EnergySpectrums.tex
+++ b/thesis/06-appendix/05-EnergySpectrums.tex
@@ -10,6 +10,6 @@
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.96\textwidth]{06-appendix/figs/energy_spectrums_all2.pdf}
-    \caption{Energy spectrums for all factorization instances. The horizontal axis shows the decimal encoding of computational basis states, while the vertical axis indicates the normalized eigenenergies.}
+    \caption{Energy spectrums for all factorization instances. The horizontal axis shows the decimal encoding of computational basis states, while the vertical axis indicates the normalized eigenenergies. Eigenstates corresponding to solutions are marked as red stars.}
     \label{fig:energy_spectrums_all}
 \end{figure}
