--- a/thesis/05-discussion/discussion.tex
+++ b/thesis/05-discussion/discussion.tex
@@ -16,8 +16,8 @@ The choice of cost function proves to be a decisive factor. Between the two line
 One of the most distinctive features of the linear protocols is the occurrence of abrupt fidelity jumps as the number of QAOA layers increases. This contrasts with the smoother fidelity evolution observed for the standard protocol, a behavior consistently seen across the problem sizes studied (see Appendix X). To understand this behavior, we analyzed the spectra of the problem Hamiltonians $\hat{H}_\mathrm{LP}$ and $\hat{H}_\mathrm{QP}$, shown in Fig.~\ref{fig:spectrums}.
 \begin{figure}[h]
     \centering
-    \includegraphics[width=1\textwidth]{05-discussion/figs/energy_spectrums.pdf}
-    \caption{Energy spectrums for (a) $N=25$, (b) $N=77$, and (c) $N=143$. The horizontal axis shows the decimal encoding of computational basis states, while the vertical axis indicates the normalized eigenenergies. These plots illustrate the broader spectral spread of the linear protocol compared to the quadratic case, which underlies the abrupt fidelity jumps discussed in the text.}
+    \includegraphics[width=0.96\textwidth]{05-discussion/figs/energy_spectrums.pdf}
+    \caption{Energy spectrums for (a) $N=25$, (b) $N=77$, and (c) $N=143$. The horizontal axis shows the decimal encoding of computational basis states, while the vertical axis indicates the normalized eigenenergies. These plots illustrate the broader spectral spread of the linear protocol compared to the quadratic case, which underlies the abrupt fidelity jumps discussed in the text. The eigenstate corresponding to the solution ($\widetilde{E}=0$) is marked as a red star.}
     \label{fig:spectrums}
 \end{figure}
 We find that the spectrum of $\hat{H}_\mathrm{LP}$ is more widely spread, leading to larger separations between relevant energy levels. Such a structure tends to promote population transfer in discrete steps, which aligns with the observed fidelity jumps. Conversely, the denser spectrum of $\hat{H}_\mathrm{QP}$ supports a more gradual redistribution of amplitude during the variational evolution.
